--- a/src/CluedIn.Connector.Common/CluedIn.Connector.Common.csproj
+++ b/src/CluedIn.Connector.Common/CluedIn.Connector.Common.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CluedIn.Core" Version="3.2.5" />
+    <PackageReference Include="CluedIn.DataStore" Version="3.2.5" />
+  </ItemGroup>
+
 </Project>
