--- a/src/CluedIn.Connector.Common/CluedIn.Connector.Common.csproj
+++ b/src/CluedIn.Connector.Common/CluedIn.Connector.Common.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CluedIn.Core" Version="3.2.5" />
-    <PackageReference Include="CluedIn.DataStore" Version="3.2.5" />
+    <PackageReference Include="CluedIn.Core" />
+    <PackageReference Include="CluedIn.DataStore" />
   </ItemGroup>
 
 </Project>
+ 
