--- a/Packages.props
+++ b/Packages.props
@@ -11,5 +11,11 @@
     -->
     <PackageReference Update="CluedIn.Core" Version="$(_CluedIn)" />
     <PackageReference Update="CluedIn.DataStore" Version="$(_CluedIn)" />
+    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Update="AutoFixture.Xunit2" Version="4.11.0" />
+    <PackageReference Update="coverlet.msbuild" Version="2.8.0" />
+    <PackageReference Update="xunit" Version="2.4.1" />
+    <PackageReference Update="xunit.runner.visualstudio" Version="2.4.1" />
+    <PackageReference Update="Moq" Version="4.13.1" />
   </ItemGroup>
 </Project>
