--- a/Packages.props
+++ b/Packages.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup Label="Dependency Versions">
-    <_CluedIn>3.3.0-beta.*</_CluedIn>
+    <_CluedIn>3.3.0-*</_CluedIn>
   </PropertyGroup>
   <ItemGroup>
     <!--
