chore: Update git version

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,9 +1,27 @@
-# GitVersion.yml
 mode: ContinuousDeployment
-next-version: 3.2.5.1
+next-version: 3.4
 branches:
   master:
     mode: ContinuousDelivery
   pull-request:
     tag: pr
     increment: None
+  develop:
+    tag: alpha
+  hotfix:
+    tag: useBranchName
+  ama:
+    increment: None
+    tracks-release-branches: false
+    regex: ^ama[/-]
+    is-release-branch: false
+    mode: ContinuousDeployment
+    track-merge-target: false
+    tag: ama
+    pre-release-weight: 30000
+    prevent-increment-of-merged-branch-version: true
+    is-mainline: false
+    source-branches:
+    - main
+    - develop
+
