chore: Push to publich on master build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,3 +42,6 @@ steps:
     displayName: 'Authenticate with nuget'
 
   - template: crawler.build.yml@templates
+    parameters:
+      githubReleaseInMaster: true
+      publicReleaseForMaster: false
